// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stages.Step /> Имеет класс tooltip если передан mode 1`] = `
<li
  className="step current"
>
  <div
    className="tooltip"
  />
  <div
    className="marker"
  >
    <span
      className="icon checkMark"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"11\\" height=\\"9\\" viewBox=\\"0 0 11 9\\"><path fill=\\"none\\" stroke=\\"#FFF\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M1 4.948L3.899 8 10 1\\"/></svg>",
        }
      }
      data-unit="icon"
      onClick={[Function]}
      onError={[Function]}
    />
    <span
      className="markerIndex"
    />
  </div>
  <div
    className="title"
  >
    Заголовок
  </div>
</li>
`;

exports[`<Stages.Step /> Рендерит заголовок 1`] = `
<li
  className="step"
>
  <div
    className="marker"
  >
    <span
      className="icon checkMark"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"11\\" height=\\"9\\" viewBox=\\"0 0 11 9\\"><path fill=\\"none\\" stroke=\\"#FFF\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M1 4.948L3.899 8 10 1\\"/></svg>",
        }
      }
      data-unit="icon"
      onClick={[Function]}
      onError={[Function]}
    />
    <span
      className="markerIndex"
    />
  </div>
  <div
    className="title"
  >
    Заголовок
  </div>
</li>
`;
